tests/errors/init_state/cfg_shape/out_ref_unfulfilled_on_return_arm_leaks.err.expected
error: at 7:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry__to__b_arm': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 7 |     switchEnum(e) [A: a_arm, B: b_arm]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
